[gd_scene load_steps=18 format=2]

[ext_resource path="res://entities/player.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/player/knight_m_idle_anim_f0.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/player/knight_m_idle_anim_f1.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/player/knight_m_idle_anim_f2.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/player/knight_m_idle_anim_f3.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/player/knight_m_hit_anim_f0.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/player/knight_m_run_anim_f0.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/player/knight_m_run_anim_f1.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/player/knight_m_run_anim_f2.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/player/knight_m_run_anim_f3.png" type="Texture" id=10]
[ext_resource path="res://assets/efx/light.png" type="Texture" id=11]
[ext_resource path="res://assets/sfx/footstep.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sfx/grunts.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sfx/swipe.wav" type="AudioStream" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 6 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "walk",
"speed": 7.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 4.44124
height = 3.45922

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4.85502, 7.0294 )

[node name="Player" type="KinematicBody2D"]
show_behind_parent = true
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
light_mask = 0
position = Vector2( 8, 8 )
z_index = 10
frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 8, 8 )
current = true
zoom = Vector2( 0.2, 0.2 )
limit_left = 0
limit_top = 0
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 8.0
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1

[node name="Light2D" type="Light2D" parent="."]
light_mask = 0
position = Vector2( 8, 16 )
texture = ExtResource( 11 )
texture_scale = 0.2
color = Color( 0.960784, 0.933333, 0.270588, 1 )
shadow_enabled = true

[node name="LightTimer" type="Timer" parent="Light2D"]
wait_time = 0.8
autostart = true

[node name="Tween" type="Tween" parent="Light2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.298039, 0.768627, 0.0588235, 1 )
light_mask = 0
position = Vector2( 7.92289, 15.694 )
z_index = 12
shape = SubResource( 4 )

[node name="SfxFootstep" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, 1 )
stream = ExtResource( 12 )
bus = "Reverb"

[node name="SfxPain" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="SfxSwipe" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 1.85062, 5.86031 )
scale = Vector2( 1.26491, 1.18779 )
z_index = 11
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 4.7368, 7.19185 )
shape = SubResource( 3 )
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
[connection signal="timeout" from="Light2D/LightTimer" to="." method="_on_LightTimer_timeout"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
